Problems section complete

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,12 +1,18 @@
+// {
+//     "printWidth": 100,
+//     "tabWidth": 2,
+//     "useTabs": false,
+//     "semi": true,
+//     "singleQuote": true,
+//     "trailingComma": "es5",
+//     "bracketSpacing": true,
+//     "jsxBracketSameLine": false,
+//     "arrowParens": "avoid",
+//     "proseWrap": "always"
+// }
 {
-    "printWidth": 100,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false,
-    "arrowParens": "avoid",
-    "proseWrap": "always"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
